# PC

./: fsm.c
Cviceni10/: CMakeLists.txt
Cviceni10/src/: CMakeLists.txt  loader.c  makefile  person.c  person.h  vector.c  vector.h
Cviceni3/: bubble_sort.c  dec2bin.c  float2bin.c
Cviceni4/: calc.c  list.c  swap.c
Cviceni5/: CMakeLists.txt  test.c
Cviceni5/bst/: CMakeLists.txt  bst.c  bst.h  makefile  tree.c
Cviceni5/pokus/: CMakeLists.txt
Cviceni7/parser/: CMakeLists.txt
Cviceni7/parser/parser/: makefile  operators.c  operators.h  parser.c  stack.c  stack.h
Cviceni8/search_experiment/search_experiment/data/: .~lock.offer.csv#
Cviceni8/search_experiment/search_experiment/src/: CMakeLists.txt  commodity.h  config.h  search_experiment.c
PC_SP_Zadani2/: dockDockBuildParams.json  fsm.h  fsm_template.c  fsmgen.c  makefile
PC_SP_Zadani2/dokumentace_sp_zdrojaky/: dokumentace.tex  thesiskiv.cls
cviceni9/: CMakeLists.txt  qsortdemo.c  qsortdemo.s
cviceni9/9_cviceni/9_cviceni/cracking/: compile.txt  game.c
drill/: CMakeLists.txt  main.c
pelikanj_zadani2/: CMakeLists.txt  dockDockBuildParams.json  fsm.c  fsm_pridani.c  fsm_sprava.c  fsmgen.c  fsmgen.h  graph4.gv  makefile  massif.out.26615  pokus.c  zaloha
pelikanj_zadani2/dokumentace_zdrojove_soubory/: main.tex  thesiskiv.cls
readMatrix/: CMakeLists.txt  main.c  pc_exam-inp-magic7.csv
sudoku/: CMakeLists.txt  easy.sud  hard.sud  makefile  sudoku.c  sudoku.h  sudos.c
zkouska/: CMakeLists.txt  fotbal.c  fotbal.h  slova.txt
zkouska_2/: CMakeLists.txt  main.c
(+7 files in other folders)
